--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Chatr</string>
+    <string name="app_name">Xpense</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add_conversation_button">Add Conversation Button</string>
     <string name="message_read_status">Message Read Status</string>
