home layout changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="dialog_handle">Dialog handle</string>
     <string name="user_profile_picture">User profile picture</string>
     <string name="transition_name_add_transaction">addTransaction</string>
+    <string name="pie_details">Pie Details</string>
     <integer name="transition_duration_millis">600</integer>
 </resources>
