--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="transition_name_add_transaction">addTransaction</string>
     <string name="pie_details">Pie Details</string>
     <integer name="transition_duration_millis">600</integer>
+    <integer name="categories_insert_animation_duration">200</integer>
 </resources>
