init fragment push

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,10 @@
     <string name="all_month">All month</string>
     <string name="show_data_for_selected_month">Show data for selected month</string>
     <string name="apply">Apply</string>
+    <string name="this_month">This Month</string>
+    <string name="monthly">Monthly</string>
+    <string name="yearly">Yearly</string>
+    <string name="analytics_type">Analytics type</string>
     <integer name="transition_duration_millis">600</integer>
     <integer name="categories_insert_animation_duration">200</integer>
     <integer name="categories_insert_slide_right_animation_duration">250</integer>
